<resources>
    <string name="app_name">common</string>
    <string name="after_s">seconds</string>
    <string name="restart_msg">will restart after</string>
    <string name="title_file_path_selector">File Path Selector</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Confirm</string>
    <string name="up_path">Up</string>
    <string name="loading">Loading.....</string>
    <string name="empty_dir">empty dir</string>
    <string name="save">Save</string>
</resources>
